===============
# S4DM 0.0.1
===============

## NEW FEATURES

* Initial development

## Bug fixes

* Modified the test for vine copula sdms to be skipped on CRAN, as the underlying c++ code seems to throw an error