@@ -1,10 +1,11 @@
 #' @name sdm_threshold
 #' @title Thresholds a continuous relative occurrence rate raster to create a binary raster.
 #' @description This function thresholds a continuous relative occurrence rate raster to produce a binary presence/absence raster.
-#' @param prediction_raster Raster containing continuous predictions of "suitability" to be thresholded
+#' @param prediction_raster Raster containing continuous predictions of relative occurrence rate to be thresholded.
 #' @param occurrence_sf An sf object containing presence locations. Should be in the projection of the prediction raster
 #' @param quantile Numeric between 0 and 1. Quantile to use for thresholding (defaults to 0.05).  Set to 0 for minimum training presence.
 #' @param return_binary LOGICAL. Should the raster returned be binary (presence/absence)?  If FALSE, predicted presences will retain their 'suitability" scores.
+#' @return A SpatRaster object containing a range map. Maps may be either binary or continuous, depending upon the `return_binary` argument.
 #' @export
 #' @importFrom stats quantile
 #' @author Cecina Babich Morrow (modified by Brian Maitner)
